[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/Alien.gd" type="Script" id=1]
[ext_resource path="res://Graphics/alien.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]

resource_name = "Animate"
length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body/Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 16, 16 ), Rect2( 16, 0, 16, 16 ), Rect2( 32, 0, 16, 16 ), Rect2( 48, 0, 16, 16 ), Rect2( 64, 0, 16, 16 ), Rect2( 80, 0, 16, 16 ) ]
}

[node name="Alien" type="Node2D" groups=[
"Alien",
]]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="body" type="Area2D" parent="."]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 5
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="body"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 0, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
shape = SubResource( 1 )

[node name="LeftVisibilityNotifier" type="VisibilityNotifier2D" parent="body"]
position = Vector2( -70, 0 )
scale = Vector2( 1.6, 0.8 )
rect = Rect2( -5, -10, 10, 20 )

[node name="RightVisibilityNotifier" type="VisibilityNotifier2D" parent="body"]
position = Vector2( 70, 0 )
scale = Vector2( 1.6, 0.8 )
rect = Rect2( -5, -10, 10, 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = "Animate"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Animate = SubResource( 2 )
blend_times = [  ]

[connection signal="body_entered" from="body" to="." method="_on_body_body_entered"]
[connection signal="screen_exited" from="body/LeftVisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="screen_exited" from="body/RightVisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
